# ucx

./: .gitmodules  configure.ac  ucx.spec.in
buildlib/jucx/: jucx-build.yml
src/tools/info/: type_info.c
src/uct/: Makefile.am  configure.m4
src/uct/utofu/: Makefile.am  configure.m4  utofu_def.h  utofu_device.c  utofu_ep.c  utofu_iface.c  utofu_md.c
